Fix accordion layout and spacing

--- a/faq-accordion-card-main/styles.scss
+++ b/faq-accordion-card-main/styles.scss
@@ -26,10 +26,11 @@ body {
 }
 
 .accordion {
-  max-width: 600px;
+  width: 500px;
   overflow: hidden;
   background: rgba(0, 0, 0, 0);
   list-style: none;
+  padding-left: 0;
 }
 
 .accordion__label {
@@ -39,6 +40,8 @@ body {
   cursor: pointer;
   position: relative;
   transition: background 0.1s;
+  padding: 0.5rem 0 0.5rem 0;
+  margin-right: 1rem;
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.1);
@@ -72,4 +75,8 @@ body {
   &:checked ~ .accordion__label::after {
     transform: translateY(-50%) rotate(180deg);
   }
+}
+
+.divider {
+  border: 1px solid hsl(240, 5%, 91%);
 }
